# falcon-evaluate

./: .flake8  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
docs/: Makefile  conf.py  index.rst  make.bat
falcon_evaluate/: context_relevancy.py  context_relevency.py  evaluate.py  fairness.py  fevaluate.py  fevaluate_plot.py  fevaluate_reliability.py  fevaluate_results.py  hallucination_scores.csv  machine_ethics.py  security.py  user_analytics.py  utils.py
