[tool.poetry]
name = "falcon-evaluate"
version = "0.1.10.0"
description = "Falcon Evaluate is an open-source Python library designed to simplify the process of evaluating and validating open source LLM models such as llama2,mistral ,etc. This library aims to provide an easy-to-use toolkit for assessing the performance, bias, and general behavior of LLMs in various natural language understanding (NLU) tasks."
authors = ["Praveen Govindaraj <praveengovi.analytics@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = ">=1.23.0,<1.24.0"
scipy = "^1.7"
pandas = "<2.0"
scikit-learn = "^1.3.1"
nltk = "^3.8.1"
sentence-transformers = "^2.2.2"
textstat = "^0.7.3"
transformers = "^4.34.1"
torch = "^2.1.0"
plotly = "^5.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = "E501, W503"
max-line-length = 120
exclude = "src/some_folder/*"
select = "E,W,F"


# Including files and directories in the package
include = ["**/*.py"]